# baltic_shipping

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  test.ipynb  test_urls.txt
archive/: COMPLETE_SCRAPING_SOLUTION.md  DATA_COMPLETENESS_ANALYSIS.md  IMO_SCRAPING_SOLUTION.md  LLM_SCRAPER_ARCHITECTURE.md  VESSEL_DATA_FORMAT.md  check_all_vessel_tabs.py  consolidated_scraper.py  inspect_vessel_page.py  test_imo_scraping.py  test_ollama_gpt.py
archive/src_baltic_shipping/: config.py  imo_playwright_scraper.py  imo_scraper.py  llm_intelligent_scraper.py
mains/processing/: analyze_discrepancy.py  merge_jsons.py
mains/scraping/: playwright_scraper.py  run_fast_scraper.py
mains/scraping/archive/: consolidated_scraper.py  master_scraper.py  run_clean_scrape.py  run_full_range_scrape.py  run_full_scrape.py  run_hybrid_scrape.py  run_imo_scraper.py  run_llm_scraper.py  run_optimized_scrape.py  run_parallel_scrape.py  run_scraper.py  run_simple_scrape.py  simple_consolidated.py
src/baltic_shipping/: fast_scraper.py  file_handler.py  logger.py  scraper.py
